--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
       </div>
     </section>
 
-    <section id="about">
-      <div class="container fade-in">
+    <section id="about" class="fade-in">
         <h2>About Me</h2>
         <div class="about-content">
           <div class="about-avatar">
@@ -175,11 +174,9 @@
             <p class="animated-text">As I prepare for my 2025 internship, I am excited to collaborate on transformative projects that fuse advanced technology with real-world applications. My journey is guided by a simple belief: learning never stops, and the best solutions come from those willing to explore beyond the ordinary.</p>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="skills">
-      <div class="container fade-in">
+    <section id="skills" class="fade-in">
         <h2>Technical Skills</h2>
         <div class="skills-grid">
           <div class="skill-category">
@@ -368,11 +365,9 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="education">
-      <div class="container fade-in">
+    <section id="education" class="fade-in">
         <h2>Education</h2>
         <div class="timeline">
           <div class="timeline-item">
@@ -398,11 +393,9 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="experience">
-      <div class="container fade-in">
+    <section id="experience" class="fade-in">
         <h2>Experience</h2>
         <div class="timeline">
           <div class="timeline-item">
@@ -435,11 +428,9 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="projects">
-      <div class="container fade-in">
+    <section id="projects" class="fade-in">
         <h2>My Projects</h2>
         <div class="project-grid">
           <div class="project-card" data-project-id="edgebev-transformer">
@@ -888,11 +879,9 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="achievements">
-      <div class="container fade-in">
+    <section id="achievements" class="fade-in">
         <h2>Achievements & Recognition</h2>
         <div class="achievements-grid">
           <div class="achievement-card">
@@ -931,11 +920,9 @@
             <span class="achievement-year">Ongoing</span>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="certificates">
-      <div class="container fade-in">
+    <section id="certificates" class="fade-in">
         <h2>Certificates & Training</h2>
         <div class="cert-grid">
           <div class="cert-item">
@@ -1246,11 +1233,9 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
 
-    <section id="contact">
-      <div class="container fade-in">
+    <section id="contact" class="fade-in">
         <h2>Let's Connect</h2>
         <div class="contact-content">
           <div class="contact-info">
@@ -1310,7 +1295,6 @@
             </form>
           </div>
         </div>
-      </div>
     </section>
 
     <!-- Project Modal -->
