--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       <i class="fas fa-brain"></i>
     </div>
     <div class="ai-chat-bubble" id="ai-chat">
-      <p>Hello! I'm ARIA, your AI guide. Ask me about Sushant's work!</p>
     </div>
   </div>
 
@@ -103,13 +102,14 @@
       <div class="hero-content fade-in">
         <div class="hero-background-animation"></div>
         <div class="matrix-rain" id="matrix-canvas"></div>
-        <h1 class="glitch-text">Sushant Sharma</h1>
+        <h1 class="glitch-text" data-text="Sushant Sharma">Sushant Sharma</h1>
         <div class="quantum-titles">
-          <span class="title-item active">Machine Learning Engineer</span>
-          <span class="title-item">AI Developer</span>
-          <span class="title-item">LLM Specialist</span>
+          <span class="title-item active">AI Systems Architect</span>
+          <span class="title-item">Machine Learning Engineer</span>
+          <span class="title-item">Neural Network Specialist</span>
+          <span class="title-item">LLM Developer</span>
           <span class="title-item">Computer Vision Expert</span>
-          <span class="title-item">Neural Network Architect</span>
+          <span class="title-item">Deep Learning Researcher</span>
         </div>
         <p class="hero-description">Crafting intelligent systems that reshape tomorrow's technology landscape</p>
         <div class="hero-stats">
