--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
   <main>
     <section id="hero">
       <div class="hero-content fade-in">
-        <div class="hero-background-animation"></div>
-        <div class="matrix-rain" id="matrix-canvas"></div>
         <h1 class="glitch-text" data-text="Sushant Sharma">Sushant Sharma</h1>
         <div class="quantum-titles">
           <span class="title-item active">AI Systems Architect</span>
@@ -171,7 +169,7 @@
             </div>
             <p class="animated-text">What defines me is not just technical expertise but an unquenchable thirst for learning and adapting. Whether it's coding in Python, Java, or C++, designing intelligent systems powered by AI, or optimizing data-driven solutions, I thrive on turning bold ideas into impactful realities. For me, every project is a chance to explore uncharted territory and grow into a more versatile engineer.</p>
             <p class="animated-text">My GitHub profile showcases 25+ repositories spanning diverse domains - from advanced AI/ML projects like EdgeBEV-Transformer (multi-modal perception for autonomous vehicles) and EmotionSentimentNet (DeBERTa-based emotion classification) to practical systems like Automated Aurora Alert System and Django-based inventory management platforms. Each project represents a deep dive into cutting-edge technologies and real-world problem-solving.</p>
-            <p class="animated-text">As I prepare for my 2025 internship, I am excited to collaborate on transformative projects that fuse advanced technology with real-world applications. My journey is guided by a simple belief: learning never stops, and the best solutions come from those willing to explore beyond the ordinary.</p>
+            <p class="animated-text">As I prepare for full-time opportunities in 2025, I am excited to collaborate on transformative projects that fuse advanced technology with real-world applications. My journey is guided by a simple belief: learning never stops, and the best solutions come from those willing to explore beyond the ordinary.</p>
           </div>
         </div>
     </section>
@@ -376,7 +374,7 @@
               <p>University of Windsor, Windsor, Ontario</p>
               <p>May 2024 - September 2025</p>
               <ul>
-                <li>Includes a 4 or 8 month internship starting May 2025</li>
+                <li>Available for full-time opportunities starting May 2025</li>
                 <li>Relevant Coursework: Artificial Intelligence, Advanced Database Systems, Internet Applications & Distributed Systems, Networking & Data Security, Advanced Software Engineering, Advanced System Programming</li>
                 <li>Specialization: Artificial Intelligence and Machine Learning</li>
               </ul>
@@ -1240,7 +1238,7 @@
         <div class="contact-content">
           <div class="contact-info">
             <h3>Ready to innovate together?</h3>
-            <p>I'm currently pursuing my Master's at University of Windsor and will be available for internship opportunities starting May 2025. Let's discuss how we can push the boundaries of AI together.</p>
+            <p>I'm currently pursuing my Master's at University of Windsor and will be available for full-time opportunities starting May 2025. Let's discuss how we can push the boundaries of AI together.</p>
             
             <div class="contact-details">
               <div class="contact-item">
@@ -1257,7 +1255,7 @@
               </div>
               <div class="contact-item">
                 <i class="fas fa-calendar"></i>
-                <span>Available for Summer Internship 2025</span>
+                <span>Available for Full-Time Opportunities 2025</span>
               </div>
             </div>
             
@@ -1347,7 +1345,6 @@
   </footer>
 
   <script src="script.js"></script>
-  <script src="cosmic-particles.js"></script>
   <script src="interactive-starfield.js"></script>
 </main>
 
