--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
               </div>
               <div class="contact-item">
                 <i class="fas fa-envelope"></i>
-                <span>sharmas1@uwindsor.ca</span>
+                <span><a href="mailto:sharmasj53@gmail.com">sharmasj53@gmail.com</a></span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-phone"></i>
