--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               <p>University of Windsor, Windsor, Ontario</p>
               <p>May 2024 - September 2025</p>
               <ul>
-                <li>Available for full-time opportunities starting May 2025</li>
+                <li>Available for full-time opportunities starting September 2025</li>
                 <li>Relevant Coursework: Artificial Intelligence, Advanced Database Systems, Internet Applications & Distributed Systems, Networking & Data Security, Advanced Software Engineering, Advanced System Programming</li>
                 <li>Specialization: Artificial Intelligence and Machine Learning</li>
               </ul>
@@ -401,15 +401,54 @@
         <div class="timeline">
           <div class="timeline-item">
             <div class="timeline-content">
+              <h3>AI Research Intern</h3>
+              <p>JLR North America, Windsor, Ontario (Remote)</p>
+              <p>May 2025 - August 2025</p>
+              <ul>
+                <li>Drove impactful research initiatives for a global automotive leader, advancing innovative solutions through cutting edge AI technologies</li>
+                <li>Designed and executed sophisticated experiments with advanced computational tools to analyze complex datasets, delivering high precision results</li>
+                <li>Developed streamlined workflows to process and evaluate data, ensuring alignment with stringent project standards and timelines</li>
+                <li>Collaborated with cross functional teams, including academic partners from the University, to achieve strategic project goals while maintaining strict confidentiality and intellectual property protocols</li>
+                <li>Leveraged expertise in artificial intelligence, machine learning, data analysis, and software development to deliver transformative outcomes in automotive research</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Machine Learning Intern</h3>
+              <p>University of Windsor, Windsor, Ontario</p>
+              <p>January 2025 - April 2025</p>
+              <ul>
+                <li>Collaborated directly with TD Bank as project client, holding regular meetings to align system requirements and progress</li>
+                <li>Independently designed and implemented the full backend system, managing data pipelines, connection between prediction models, and infrastructure</li>
+                <li>Developed machine learning modules focused on credit-lending decision predictions, optimizing for model integrity and production readiness</li>
+                <li>Contributed to rigorous model validation, testing workflows, and system documentation to ensure deployment quality</li>
+                <li>Technologies: Python, Scikit-learn, XGBoost, Pandas, SQL, CLI, Agile</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
               <h3>Machine Learning Engineer</h3>
-              <p>NK Industries, Una, India</p>
+              <p>S.S. Engineering Works, Una, India</p>
               <p>June 2023 - April 2024</p>
               <ul>
-                <li>Developed Python-based analytics to replace external consultants, saving ₹8,00,000 annually</li>
-                <li>Automated data cleaning and built custom dashboards for real-time decision-making</li>
-                <li>Created an inventory management system integrated with sales data, improving efficiency by 30% and reducing wastage by 15%</li>
-                <li>Implemented computer vision solutions for quality control and process optimization</li>
-                <li>Built predictive models for demand forecasting and supply chain optimization</li>
+                <li>Developed AI-based predictive analytics, reducing inventory costs by 15% and improving financial decision-making</li>
+                <li>Implemented fine-tuned deep learning models using PyTorch & TensorFlow for anomaly detection in industrial operations</li>
+                <li>Automated data pipelines and reporting using Python, Pandas, and SQL, improving efficiency by 20%</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Data Science Intern</h3>
+              <p>S.S. Engineering Works, Una, India</p>
+              <p>June 2022 - June 2023</p>
+              <ul>
+                <li>Analyzed large datasets to identify patterns and trends in manufacturing processes</li>
+                <li>Developed statistical models for quality control and process optimization</li>
+                <li>Created data visualization dashboards using Python and statistical tools</li>
+                <li>Collaborated with engineering teams to implement data-driven solutions</li>
               </ul>
             </div>
           </div>
